# Verifiable-AI-Decision-Records-Demo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  setup.py
app/: anchor.py  ario_verify.py  config.py  decision_record.py  lifecycle.py  main.py  model.py  proof.py  reset.py  storage.py  tamper.py  ui.py
ario_mlflow/: README.md  __init__.py  anchoring.py  arweave.py  cli.py  client.py  model.py  plugin.py  proof.py  report.py  verify.py
docs/: known-issues.md  plugin-production.md  plugin-threat-model.md
docs/plans/active/: 2026-05-08-detail-page-anchor-card-overlap.md  2026-05-11-dataset-first-lifecycle-inversion.md  2026-05-11-test-suite-speedup.md
docs/plans/archived/: 2026-05-06-input-side-anchoring.md  2026-05-06-standalone-dataset-anchoring.md
docs/superpowers/plans/: 2026-04-30-phase3-demo-ux-polish.md
docs/superpowers/specs/: 2026-04-30-phase3-demo-ux-polish-design.md
examples/sklearn-quickstart/: train_and_anchor.py
scripts/: train_model.py  verify.py
templates/: _active_badge.html  _proof_viewer.html  _qa_section.html  _status_badge.html  _verdict_banner.html  _verify_card.html  base.html  dataset_detail.html  datasets_list.html  decision_detail.html  demo_admin.html  index.html  lineage.html  model_chain.html  model_detail.html  model_registry.html  models_list.html  reports_detail.html  reports_list.html  run_detail.html  runs_list.html  tamper.html  who_this_is_for.html
tests/: test_dataset_first.py  test_demo_reset.py  test_input_anchoring.py  test_plugin_resilience.py  test_plugin_safety.py  test_plugin_smoke.py  test_reports_view.py  test_tamper_endpoints.py
