[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ario-mlflow"
version = "0.1.0"
description = "ar.io MLflow plugin — verifiable provenance for the ML lifecycle"
readme = "ario_mlflow/README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "ar.io" },
]
keywords = [
    "mlflow",
    "arweave",
    "ar.io",
    "provenance",
    "mlops",
    "verification",
    "cryptography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mlflow>=2.14.0",
    "PyNaCl>=1.5.0",
    "turbo-sdk>=0.0.5",
    "requests>=2.31.0",
    "jcs>=0.2.1",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/vilenarios/Verifiable-AI-Decision-Records-Demo"
Repository = "https://github.com/vilenarios/Verifiable-AI-Decision-Records-Demo"
Issues = "https://github.com/vilenarios/Verifiable-AI-Decision-Records-Demo/issues"

[project.entry-points."mlflow.run_context_provider"]
ario = "ario_mlflow.plugin:ArioContextProvider"

[project.scripts]
ario-mlflow = "ario_mlflow.cli:main"

[tool.setuptools]
packages = ["ario_mlflow"]
